--- a/Project.toml
+++ b/Project.toml
@@ -3,8 +3,17 @@ uuid = "bb151fc1-c6dc-5496-8ed6-07f94907e623"
 version = "0.2.1"
 
 [compat]
-julia = "1"
+Aqua = "0.8"
 Sockets = "1"
+Test = "1"
+julia = "1"
 
 [deps]
 Sockets = "6462fe0b-24de-5631-8697-dd941f90decc"
+
+[extras]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Aqua", "Test"]
