--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,3 +1,7 @@
 [deps]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 PiGPIO = "bb151fc1-c6dc-5496-8ed6-07f94907e623"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[compat]
+Aqua = "0.8"
